feat: format project

--- a/src/components/home/about.astro
+++ b/src/components/home/about.astro
@@ -14,11 +14,13 @@
       </h2>
       <p class="text-lg text-grisclaro font-sans">
         Mi camino en los deportes de combate comenzó a los <strong
-          class="text-white">11 años en Guangzhou, China</strong
-        >, donde entrené Muay Thai durante varios meses. Luego me trasladé a
-        Venezuela y comencé a practicar <strong class="text-white"
-          >boxeo amateur</strong
-        >, etapa que fortaleció mi técnica y disciplina.
+          class="text-white"
+        >
+          11 años en Guangzhou, China
+        </strong>, donde entrené Muay Thai durante varios meses. Luego me
+        trasladé a Venezuela y comencé a practicar <strong class="text-white">
+          boxeo amateur
+        </strong>, etapa que fortaleció mi técnica y disciplina.
       </p>
       <p class="text-lg text-grisclaro font-sans">
         Tras una pausa por motivos personales, retomé el camino del combate
@@ -28,20 +30,24 @@
       </p>
       <p class="text-lg text-grisclaro font-sans">
         Mi carrera deportiva tomó rumbo profesional al llegar a <strong
-          class="text-white">Panamá</strong
-        >, donde entrené bajo la dirección de <strong class="text-white"
-          >Melbin Mendoza</strong
-        > en la escuela de boxeo “Yuyin Luzcando”. Allí inicié oficialmente como
-        peleador amateur.
+          class="text-white"
+        >
+          Panamá
+        </strong>, donde entrené bajo la dirección de <strong
+          class="text-white"
+        >
+          Melbin Mendoza
+        </strong> en la escuela de boxeo “Yuyin Luzcando”. Allí inicié oficialmente
+        como peleador amateur.
       </p>
       <p class="text-lg text-grisclaro font-sans">
-        A lo largo de mi carrera disputé <strong class="text-white"
-          >7 combates oficiales</strong
-        >: gané 3 por decisión unánime, 1 por TKO y 1 por KO. También enfrenté 2
-        derrotas por decisión unánime. Mi recorrido en el ring se vio
-        interrumpido por una <strong class="text-white"
-          >lesión seria en la muñeca izquierda</strong
-        >, la cual me obligó a cerrar ese capítulo competitivo.
+        A lo largo de mi carrera disputé <strong class="text-white">
+          7 combates oficiales
+        </strong>: gané 3 por decisión unánime, 1 por TKO y 1 por KO. También
+        enfrenté 2 derrotas por decisión unánime. Mi recorrido en el ring se vio
+        interrumpido por una <strong class="text-white">
+          lesión seria en la muñeca izquierda
+        </strong>, la cual me obligó a cerrar ese capítulo competitivo.
       </p>
 
       <!-- Placeholder insignias -->
