--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,7 +5,7 @@ import About from '../components/home/about.astro'
 import TrainingPreview from '../components/home/trainingPreview.astro'
 ---
 
-<BaseLayout title="Inicio" description="...">
+<BaseLayout title="Boxing Trainer" description="...">
   <Header />
   <About />
   <TrainingPreview />
