--- a/src/components/ui/navBar.astro
+++ b/src/components/ui/navBar.astro
@@ -1,26 +1,44 @@
 ---
-import { Astronav, MenuItems, MenuIcon } from 'astro-navbar'
+// src/components/Navbar.astro
+import {
+  Astronav,
+  MenuItems,
+  MenuIcon,
+  OpenIcon,
+  CloseIcon,
+} from 'astro-navbar'
+
+import MenuBurger from '/public/icons/menu-burger.svg'
+import Cross from '/public/icons/cross.svg'
 ---
 
-<div class="bg-rojo text-blanco shadow-md">
-  <Astronav>
+<header class="bg-rojo text-blanco shadow-md">
+  <Astronav closeOnClick>
     <div class="container mx-auto p-4 flex justify-between items-center">
       <a href="/" class="text-xl font-bold">Boxing Trainer</a>
-      <MenuIcon class="md:hidden text-white text-2xl" />
+
+      <div class="md:hidden">
+        <MenuIcon>
+          <OpenIcon>
+            <MenuBurger width={30} height={30} />
+          </OpenIcon>
+          <CloseIcon> <Cross width={30} height={30} /> </CloseIcon>
+        </MenuIcon>
+      </div>
+      <MenuItems class="hidden md:flex md:space-x-6">
+        <ul class="flex flex-col md:flex-row md:space-x-4">
+          <li><a href="/" class="px-4 py-2 hover:text-negro">Inicio</a></li>
+          <li>
+            <a href="/about" class="px-4 py-2 hover:text-negro">Sobre mí</a>
+          </li>
+          <li>
+            <a href="/services" class="px-4 py-2 hover:text-negro">Servicios</a>
+          </li>
+          <li>
+            <a href="/contact" class="px-4 py-2 hover:text-negro">Contacto</a>
+          </li>
+        </ul>
+      </MenuItems>
     </div>
-    <MenuItems
-      class="hidden md:flex md:space-x-6 md:static absolute top-full left-0 w-full md:w-auto bg-rojo md:bg-transparent transition-all duration-300 ease-in-out"
-    >
-      <ul class="flex flex-col md:flex-row md:space-x-4">
-        <li>
-          <a href="/" class="block px-4 py-2 md:p-0 hover:text-negro">Inicio</a>
-        </li>
-        <li>
-          <a href="/contact" class="block px-4 py-2 md:p-0 hover:text-negro">
-            Contacto
-          </a>
-        </li>
-      </ul>
-    </MenuItems>
   </Astronav>
-</div>
+</header>
