feat: home page images

--- a/src/components/home/trainingPreview.astro
+++ b/src/components/home/trainingPreview.astro
@@ -1,21 +1,28 @@
 ---
 import CardService from '../ui/cards.astro'
 
+import Image1 from '/public/images/home_expectations_1.png'
+import Image2 from '/public/images/home_expectations_2.png'
+import Image3 from '/public/images/home_expectations_3.png'
+
 const highlights = [
   {
     title: 'Técnica & aprendizaje',
     description:
       'Aprenderás boxeo desde la base, con explicaciones claras, ejercicios técnicos y aplicación real en guanteleta, saco o fideos.',
+    image: Image1,
   },
   {
     title: 'Trabajo físico',
     description:
       'Fortalecemos cuerpo y mente con sesiones activas de 30-45 min: HIIT, fuerza, resistencia y coordinación adaptadas a tu nivel.',
+    image: Image2,
   },
   {
     title: 'Superación personal',
     description:
       'Más que boxeo: liberarás estrés, ganarás confianza, mejorarás tu enfoque y te sentirás capaz de enfrentar cualquier reto.',
+    image: Image3,
   },
 ]
 ---
