--- a/src/components/ui/navBar.astro
+++ b/src/components/ui/navBar.astro
@@ -15,7 +15,7 @@ import Cross from '/public/icons/cross.svg'
 <header class="bg-rojo text-blanco shadow-md">
   <Astronav closeOnClick>
     <div class="container mx-auto p-4 flex justify-between items-center">
-      <a href="/" class="text-xl font-bold">Boxing Trainer</a>
+      <a href="/" class="text-xl font-bold">Jose Aguilar</a>
 
       <div class="md:hidden">
         <MenuIcon>
