--- a/src/components/home/about.astro
+++ b/src/components/home/about.astro
@@ -1,8 +1,19 @@
+---
+import { Image } from 'astro:assets'
+import Portrait from '/public/images/about_me_portrait.png'
+---
+
 <section class="bg-negro text-blanco py-16 px-6 md:px-24">
-  <div class="max-w-6xl mx-auto flex flex-col md:flex-row items-center gap-10">
+  <div class="max-w-6xl mx-auto flex flex-col xl:flex-row items-center gap-10">
     <!-- Placeholder de imagen del entrenador -->
     <div class="w-full md:w-1/3">
-      <div class="w-full aspect-[3/4] bg-gray-800 rounded-lg"></div>
+      <div class="w-full aspect-[1/1] sm:aspect-[3/4] bg-gray-800 rounded-lg">
+        <Image
+          src={Portrait}
+          alt="Placeholder de entrenador"
+          class="w-full h-full object-cover object-center rounded"
+        />
+      </div>
     </div>
 
     <!-- Contenido textual -->
@@ -49,13 +60,6 @@
           lesión seria en la muñeca izquierda
         </strong>, la cual me obligó a cerrar ese capítulo competitivo.
       </p>
-
-      <!-- Placeholder insignias -->
-      <div class="flex gap-6 flex-wrap mt-4">
-        <div class="w-16 h-16 rounded-full bg-gray-600"></div>
-        <div class="w-16 h-16 rounded-full bg-gray-600"></div>
-        <div class="w-16 h-16 rounded-full bg-gray-600"></div>
-      </div>
     </div>
   </div>
 </section>
