Add training system info on services page

--- a/src/pages/services/index.astro
+++ b/src/pages/services/index.astro
@@ -1,13 +1,13 @@
 ---
 import BaseLayout from '../../layouts/baseLayout.astro'
-import TrainingPreview from '../../components/home/trainingPreview.astro'
+import TrainingSystem from '../../components/services/trainingSystem.astro'
 ---
 
 <BaseLayout
   title="Boxing Trainer - Jose Aguilar - Servicios"
   description="Descubre los programas de entrenamiento disponibles"
 >
-  <TrainingPreview />
+  <TrainingSystem />
   <section class="bg-negro text-blanco py-16 px-6 md:px-24">
     <div class="max-w-3xl mx-auto text-center flex flex-col gap-6">
       <p class="text-grisclaro font-sans">
