feat: training page and

--- a/src/components/ui/navBar.astro
+++ b/src/components/ui/navBar.astro
@@ -32,7 +32,9 @@ import Cross from '/public/icons/cross.svg'
             <a href="/about" class="px-4 py-2 hover:text-negro">Sobre mí</a>
           </li>
           <li>
-            <a href="/services" class="px-4 py-2 hover:text-negro">Servicios</a>
+            <a href="/training" class="px-4 py-2 hover:text-negro">
+              Entrenamiento
+            </a>
           </li>
           <li>
             <a href="/contact" class="px-4 py-2 hover:text-negro">Contacto</a>
