--- a/src/pages/training/index.astro
+++ b/src/pages/training/index.astro
@@ -4,7 +4,7 @@ import TrainingSystem from '../../components/services/trainingSystem.astro'
 ---
 
 <BaseLayout
-  title="Boxing Trainer - Jose Aguilar - Servicios"
+  title="Boxing Trainer - Jose Aguilar - Sistema de Entrenamiento"
   description="Descubre los programas de entrenamiento disponibles"
 >
   <TrainingSystem />
