--- a/src/components/home/header.astro
+++ b/src/components/home/header.astro
@@ -31,7 +31,7 @@ import HeaderMobile from '/public/images/header_mobile.jpg'
         Entrena<br />como un campeón
       </h1>
       <a
-        href="#contacto"
+        href="/contact"
         class="inline-block bg-rojo text-blanco py-3 px-6 rounded-lg
           text-base sm:text-lg font-semibold hover:bg-grisoscuro transition w-fit"
       >
