Update domain for sitemap and schema

--- a/src/components/home/about.astro
+++ b/src/components/home/about.astro
@@ -10,7 +10,7 @@ import Portrait from '/public/images/about_me_portrait.png'
       <div class="w-full aspect-[1/1] sm:aspect-[3/4] bg-gray-800 rounded-lg">
         <Image
           src={Portrait}
-          alt="Placeholder de entrenador"
+          alt="Entrenador de boxeo en Ciudad de Panamá"
           class="w-full h-full object-cover object-center rounded"
         />
       </div>
@@ -50,6 +50,11 @@ import Portrait from '/public/images/about_me_portrait.png'
           Melbin Mendoza
         </strong> en la escuela de boxeo “Yuyin Luzcando”. Allí inicié oficialmente
         como peleador amateur.
+      </p>
+      <p class="text-lg text-grisclaro font-sans">
+        Actualmente soy entrenador de boxeo en Ciudad de Panamá y ofrezco
+        <strong class="text-white">clases personalizadas</strong> para todas las
+        edades y niveles.
       </p>
       <p class="text-lg text-grisclaro font-sans">
         A lo largo de mi carrera disputé <strong class="text-white">
