--- a/src/components/home/header.astro
+++ b/src/components/home/header.astro
@@ -8,14 +8,14 @@ import HeaderMobile from '/public/images/header_mobile.jpg'
   <!-- Imagen de fondo MOBILE -->
   <Image
     src={HeaderMobile}
-    alt="Boxeador móvil"
+    alt="Entrenamiento de boxeo en Ciudad de Panamá - móvil"
     class="absolute inset-0 w-full h-full object-cover object-top z-0 block md:hidden"
   />
 
   <!-- Imagen de fondo DESKTOP -->
   <Image
     src={HeaderDesktop}
-    alt="Boxeador escritorio"
+    alt="Entrenamiento de boxeo en Ciudad de Panamá - escritorio"
     class="absolute inset-0 w-full h-full object-cover object-right z-0 hidden md:block"
   />
 
@@ -30,6 +30,9 @@ import HeaderMobile from '/public/images/header_mobile.jpg'
       >
         Entrena<br />como un campeón
       </h1>
+      <p class="text-lg text-grisclaro font-sans">
+        Entrenador de boxeo en Ciudad de Panamá
+      </p>
       <a
         href="#contacto"
         class="inline-block bg-rojo text-blanco py-3 px-6 rounded-lg
