fix: phone number

--- a/src/pages/contact/index.astro
+++ b/src/pages/contact/index.astro
@@ -89,7 +89,7 @@ export const POST: APIRoute = async ({ request }) => {
         </button>
       </form>
       <div class="text-grisclaro text-center font-sans">
-        <p>
+        <!-- <p>
           También puedes escribir a
           <a
             href="mailto:arturo.puentes.yu@gmail.com"
@@ -97,12 +97,12 @@ export const POST: APIRoute = async ({ request }) => {
           >
             arturo.puentes.yu@gmail.com
           </a>
-        </p>
-        <p>Dirección: Calle 50, Ciudad de Panamá, Panamá</p>
+        </p> -->
+        <p>Dirección: Ciudad de Panamá, Panamá</p>
         <p>
           Teléfono:
-          <a href="tel:+50760000000" class="text-rojo hover:underline">
-            +507 6000-0000
+          <a href="tel:+50766270472" class="text-rojo hover:underline">
+            +507 6627-0472
           </a>
         </p>
         <p>Horario: Lunes a Viernes 6:00-20:00</p>
